tooltip style; menu style; icons;

--- a/packages/core/src/components/menu/_menu.scss
+++ b/packages/core/src/components/menu/_menu.scss
@@ -61,7 +61,7 @@ Styleguide menu
 
   &::before,
   > .#{$ns}-icon {
-    color: $pt-icon-color;
+    color: inherit;
   }
 
   .#{$ns}-menu-item-label {
