--- a/packages/core/src/common/_variables-hipa.scss
+++ b/packages/core/src/common/_variables-hipa.scss
@@ -124,3 +124,6 @@ $hipa-placeholder-color: $hipa-gray-dark-500;
 
 // shadows
 $hipa-popover-box-shadow: 0px 4px 15px rgba(17, 3, 0, 0.08);
+
+// opacity
+$hipa-tooltip-opacity: 0.75;
