--- a/packages/core/src/components/popover/_common.scss
+++ b/packages/core/src/components/popover/_common.scss
@@ -142,6 +142,12 @@ $dark-popover-background-color: $dark-gray4 !default;
     background: $background-color;
     color: $text-color;
   }
+
+  .#{$ns}-popover-arrow {
+    opacity: $hipa-tooltip-opacity;
+  }
+
+
 }
 
 @mixin fade-transition() {
