--- a/packages/core/src/components/tooltip/_tooltip.scss
+++ b/packages/core/src/components/tooltip/_tooltip.scss
@@ -14,7 +14,7 @@
   @include popover-appearance(
     $tooltip-background-color,
     $tooltip-text-color,
-    $pt-tooltip-box-shadow,
+    none,
     none
   );
   // lightweight scale for tooltips
