--- a/packages/core/src/components/tag/_tag.scss
+++ b/packages/core/src/components/tag/_tag.scss
@@ -2,6 +2,7 @@
 // Licensed under the Apache License, Version 2.0.
 
 @import "../../common/variables";
+@import "../../common/mixins-hipa";
 @import "./common";
 
 /*
@@ -44,7 +45,7 @@ Styleguide tag
     @include pt-tag-large();
   }
 
-  @each $intent, $color in $pt-intent-colors {
+  @each $intent, $color in $hipa-intent-colors {
     &.#{$ns}-intent-#{$intent} {
       @include pt-tag-intent($color);
     }
@@ -58,7 +59,7 @@ Styleguide tag
   &.#{$ns}-minimal {
     @include pt-tag-minimal();
 
-    @each $intent, $color in $pt-intent-colors {
+    @each $intent, $color in $hipa-intent-colors {
       &.#{$ns}-intent-#{$intent} {
         @include pt-tag-minimal-intent(
           $color,
