--- a/packages/core/src/components/toast/_toast.scss
+++ b/packages/core/src/components/toast/_toast.scss
@@ -113,19 +113,19 @@ $toast-margin: $hipa-grid-size * 3 !default;
 
   // HACKHACK custom colors for buttons on intent background so they always show up nice
   /* stylelint-disable declaration-no-important */
-  &[class*="#{$ns}-intent-"] .#{$ns}-button {
-    &,
-    &::before,
-    .#{$ns}-icon,
-    &:active {
-      color: $hipa-gray-dark-200 !important;
-    }
-
-    &:focus {
-      // blue outline color shows poorly on colored bg
-      outline-color: $hipa-gray-dark-300;
-    }
-  }
+  //&[class*="#{$ns}-intent-"] .#{$ns}-button {
+  //  &,
+  //  &::before,
+  //  .#{$ns}-icon,
+  //  &:active {
+  //    color: $hipa-gray-dark-200 !important;
+  //  }
+  //
+  //  &:focus {
+  //    // blue outline color shows poorly on colored bg
+  //    outline-color: $hipa-gray-dark-300;
+  //  }
+  //}
   /* stylelint-enable declaration-no-important */
 
   // define these last so they override default dark colors above
@@ -135,7 +135,7 @@ $toast-margin: $hipa-grid-size * 3 !default;
         background-color: $color;
       }
 
-      .#{$ns}-icon {
+      .#{$ns}-icon:not(.close) {
         color: $color;
       }
     }
