--- a/packages/core/src/common/_variables-hipa.scss
+++ b/packages/core/src/common/_variables-hipa.scss
@@ -124,6 +124,9 @@ $hipa-placeholder-color: $hipa-gray-dark-500;
 
 // shadows
 $hipa-popover-box-shadow: 0px 4px 15px rgba(17, 3, 0, 0.08);
+$hipa-button-box-shadow-hover:
+  inset 0 0 0 1px $hipa-border-hover-color,
+  inset 0 1px 0 $hipa-border-hover-color !default;
 
 // opacity
 $hipa-tooltip-opacity: 0.75;
