--- a/packages/core/src/components/forms/_numeric-input.scss
+++ b/packages/core/src/components/forms/_numeric-input.scss
@@ -4,6 +4,38 @@
 @import "./common";
 
 .#{$ns}-numeric-input {
+  .#{$ns}-numeric-button-group {
+    align-items: center;
+    color: $hipa-gray-100;
+    // hide arrow buttons until hover
+    display: none;
+    flex-direction: column;
+    height: 100%;
+    justify-content: center;
+    padding: 1px 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: index($control-group-stack, "select-caret");
+
+    .#{$ns}-numeric-button {
+      align-items: center;
+      cursor: pointer;
+      display: flex;
+      flex-grow: 1;
+      justify-content: center;
+
+      &:hover {
+        color: $hipa-gray-dark-500;
+      }
+    }
+  }
+
+  &:hover {
+    .#{$ns}-numeric-button-group {
+      display: flex;
+    }
+  }
 
   // we need a very-specific selector here to override specificicty of selectors defined elsewhere.
   .#{$ns}-button-group.#{$ns}-vertical > .#{$ns}-button {
