--- a/packages/core/src/components/forms/_numeric-input.scss
+++ b/packages/core/src/components/forms/_numeric-input.scss
@@ -16,6 +16,7 @@
     position: absolute;
     right: 0;
     top: 0;
+    user-select: none;
     z-index: index($control-group-stack, "select-caret");
 
     .#{$ns}-numeric-button {
