--- a/packages/core/src/common/_colors-hipa.scss
+++ b/packages/core/src/common/_colors-hipa.scss
@@ -37,7 +37,7 @@ $hipa-gray-dark-300: #777777;
 $hipa-gray-dark-400: #999999;
 $hipa-gray-dark-500: #9F9F9F;
 $hipa-gray-100: #C0C0C0;
-$hipa-gray-200: #E6E6E6;
+$hipa-gray-200: #D9D9D9;
 $hipa-gray-300: #F0F0F0;
 $hipa-gray-400: #F6F6F6;
 $hipa-gray-500: #F9F9F9;
