submenu box-shadow

--- a/packages/core/src/components/menu/_submenu.scss
+++ b/packages/core/src/components/menu/_submenu.scss
@@ -27,7 +27,7 @@
     padding: 0 0;
 
     > .#{$ns}-popover-content {
-      box-shadow: $hipa-popover-box-shadow;
+      box-shadow: $hipa-popover-submenu-box-shadow;
     }
 
     .#{$ns}-dark &,
