--- a/packages/core/src/common/_variables-hipa.scss
+++ b/packages/core/src/common/_variables-hipa.scss
@@ -124,6 +124,7 @@ $hipa-placeholder-color: $hipa-gray-dark-500;
 
 // shadows
 $hipa-popover-box-shadow: 0px 4px 15px rgba(17, 3, 0, 0.08);
+$hipa-popover-submenu-box-shadow: 0px 4px 13px rgba(24, 5, 0, 0.04);
 $hipa-button-box-shadow-hover:
   inset 0 0 0 1px $hipa-border-hover-color,
   inset 0 1px 0 $hipa-border-hover-color !default;
