fix checkbox indicator disabled style; fix input disabled style; icon svg stroke color converted to currentColor;

--- a/packages/core/src/common/_variables-hipa.scss
+++ b/packages/core/src/common/_variables-hipa.scss
@@ -57,6 +57,7 @@ $hipa-input-height-large: $hipa-grid-size * 4.5 !default;
 $hipa-input-height-small: $hipa-grid-size * 3.5 !default;
 
 $hipa-input-text-disabled: $hipa-gray-100;
+$hipa-input-border-disabled: $hipa-gray-200;
 $hipa-input-bg-disabled: $hipa-gray-500;
 $hipa-input-bg-hover: $hipa-gray-500;
 $hipa-input-bg-active: $hipa-gray-300;
