--- a/packages/core/src/components/html-select/_html-select.scss
+++ b/packages/core/src/components/html-select/_html-select.scss
@@ -29,6 +29,7 @@ Styleguide select
 
 .#{$ns}-html-select,
 .#{$ns}-select {
+  background-color: $hipa-white;
   display: inline-block;
   letter-spacing: normal;
   position: relative;
