--- a/packages/core/src/common/_variables-hipa.scss
+++ b/packages/core/src/common/_variables-hipa.scss
@@ -130,6 +130,11 @@ $hipa-toast-box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.06);
 $hipa-button-box-shadow-hover:
   inset 0 0 0 1px $hipa-border-hover-color,
   inset 0 1px 0 $hipa-border-hover-color !default;
+$hipa-disabled-border-shadow:
+  inset 0 1px 0 0 $hipa-input-border-disabled,
+  inset 0 -1px 0 0 $hipa-input-border-disabled,
+  inset -1px 0 0 0 $hipa-input-border-disabled,
+  inset 1px 0 0 0 $hipa-input-border-disabled;
 
 // opacity
 $hipa-tooltip-opacity: 0.75;
